# StereoDepthEstimation

./: .gitignore  Doxyfile  README.md  createProjectDoc.sh  pull.sh  push.sh
PixelMatching/: CMakeLists.txt  Doxyfile  clean.sh  compile.sh  createDoc.sh  install.sh  launcher.sh
PixelMatching/include/: CrossCorrelation.hpp
PixelMatching/src/: CMakeLists.txt  CrossCorrelation.cpp  main.cpp
calibration/: .gitignore  CMakeLists.txt  Doxyfile  clean.sh  compile.sh  createDoc.sh  install.sh
calibration/calibration_setup/: parameters.yml
calibration/include/: calibration.hpp
calibration/lib/: CMakeLists.txt  calibration.cpp
calibration/src/: CMakeLists.txt  calibration.cpp  main.cpp  stereo_calibration.cpp
disparity_map/: CMakeLists.txt  compile.sh  launcher.sh
disparity_map/src/: disparityMap.cpp
point_cloud/: CMakeLists.txt  clean.sh  compile.sh  install.sh  launcher.sh
point_cloud/src/: pointCloud.cpp
stereo_calibration/: CMakeLists.txt  Doxyfile  clean.sh  launcher.sh
stereo_calibration/calibration_setup/: intrinsicExtrinsicParameters.yml
stereo_calibration/include/: calibration.hpp
stereo_calibration/src/: CMakeLists.txt  calibration.cpp  main.cpp  stereo_calibration.cpp
stereo_depth/: .gitignore  CMakeLists.txt  README.md  clean.sh  install.sh
stereo_depth/benchmark/: CMakeLists.txt  benchmark.cu  standard_formats_benchmark.cu
stereo_depth/cmake/: GPUConfig.cmake
stereo_depth/example/: CMakeLists.txt  main_cpu.cpp  main_gpu.cu  main_gpu_shared.cu
stereo_depth/include/: analysis.hpp  benchmark.hpp  cuda_cross_correlation.cuh  path.hpp  test_seq_par.hpp
stereo_depth/include/stereodepth/: cross_correlation.cuh  cross_correlation.hpp  math.hpp  stereo_image.hpp  type.hpp
stereo_depth/python/: bar.py  install.sh  launcher.sh  main_32-512.py  main_standard_formats.py  plot.py  prova.py  requirements.txt  speed_up.py  speed_up_bar_chart.py  time_series.py  time_series_boxplot.py  time_series_boxplot_standard_formats.py  time_series_with_error.py
stereo_depth/src/: CMakeLists.txt  cross_correlation.cpp  cross_correlation.cu  cuda_cross_correlation.cu  main.cu  math.cpp  stereo_image.cpp
stereo_depth/test/: CMakeLists.txt  test.hpp  test_core.cpp  test_main.cpp  test_math.cpp  test_seq_par.cu  test_seq_par_1024x1024.cu  test_seq_par_128x128.cu  test_seq_par_2048x2048.cu  test_seq_par_256x256.cu  test_seq_par_32x32.cu  test_seq_par_512x512.cu  test_seq_par_64x64.cu
zed_benchmark/: .gitignore  CMakeLists.txt  clean.sh  compile.sh  launcher.sh
zed_benchmark/lib/: analysis.hpp
zed_benchmark/src/: main.cpp
