cmake_minimum_required(VERSION 2.8)
project( Calibration )
set(BIN "${CMAKE_CURRENT_SOURCE_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN})
set(SOURCES src/stereo_calibration.cpp)
find_package( OpenCV REQUIRED)
add_subdirectory(src)
include_directories(${PROJECT_SOURCE_DIR}/include)
add_executable( calibration ${SOURCES})
target_link_libraries( calibration lib)
